--- a/Projects/LeadLag/leadlag_analysis_v1.ipynb
+++ b/Projects/LeadLag/leadlag_analysis_v1.ipynb
@@ -23210,11 +23210,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c308e34cc3c9918332e88faf53c9e84b3c0729c98cf6c39a612a2a016c133ea3"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('py38': conda)",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -23228,9 +23225,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
