--- a/Projects/CTA/CTA1.ipynb
+++ b/Projects/CTA/CTA1.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -223,13 +223,39 @@
        " 'license_type': 'TRIAL'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rq.user.get_quota()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bytes_used': 126620241,\n",
+       " 'bytes_limit': 10737418240.0,\n",
+       " 'remaining_days': 14,\n",
+       " 'license_type': 'FULL'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user = 18123610100\n",
+    "pw = 123456\n",
+    "rq.init(user, pw)\n",
+    "rq.user.get_quota()\n"
    ]
   },
   {
