--- a/Projects/CTA/src/CTA1.ipynb
+++ b/Projects/CTA/src/CTA1.ipynb
@@ -78,32 +78,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'E:\\\\My_Strategies_CTA\\\\pkl_tick'"
+       "96"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from multiprocessing import pool, cpu_count\n",
+    "cpu_count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/yby/SGD-HFT-Intern/Projects/CTA/src'"
+      ]
+     },
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import os\n",
-    "from multiprocessing import pool, cpu_count\n",
-    "HEAD_PATH = r\"E:\\My_Strategies_CTA\" \n",
-    "DATA_PATH = HEAD_PATH + \"\\\\pkl_tick\" \n",
-    "os.chdir(DATA_PATH) #\n",
-    "# 查看计算机核数，我的是8，babyquant是16，越高性能越好\n",
-    "# 为了加速程序，使用多核并行\n",
-    "CORE_NUM = int(os.environ['NUMBER_OF_PROCESSORS']) #结果是8\n",
-    "# 或者CORE_NUM = cpu_count() #返回结果也是8\n",
-    "os.getcwd() #显示当前directory"
+    "os.getcwd()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# global settings\n",
+    "HEAD_PATH = \"/home/yby/SGD-HFT-Intern/Projects/CTA\"\n",
+    "DATA_PATH = HEAD_PATH\n",
+    "SAVE_PATH = HEAD_PATH + \"/result\"\n",
+    "SIGNAL_PATH = HEAD_PATH\n",
+    "CORE_NUM = 48"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nvcc: NVIDIA (R) Cuda compiler driver\n",
+      "Copyright (c) 2005-2019 NVIDIA Corporation\n",
+      "Built on Sun_Jul_28_19:07:16_PDT_2019\n",
+      "Cuda compilation tools, release 10.1, V10.1.243\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvcc -V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2428,11 +2496,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "6f5583cf1d9466b5c27e75c89cc6b383bed5736d6b16c51c8074d8690011a952"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.8.13 ('yby')",
    "language": "python",
    "name": "python3"
   },
@@ -2446,9 +2511,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "vscode": {
+   "interpreter": {
+    "hash": "c95fbed52b129232c9ea0f2f91c787ed695e80b66859bc8c4100814e282311dd"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
