--- a/Projects/CTA/src/test.ipynb
+++ b/Projects/CTA/src/test.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -81,7 +81,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "4           0            0           0            0  09:00:00.841000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
        "4           0            0           0            0  09:00:00.841000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -903,13 +903,181 @@
        " 'bb2112.csv.gz']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rc.get_future_list('20210302', 'l2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bytes_used': 0,\n",
+       " 'bytes_limit': 1073741824.0,\n",
+       " 'remaining_days': 11,\n",
+       " 'license_type': 'TRIAL'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import rqdatac as rq\n",
+    "user = '15626436420'\n",
+    "pw = 'vista2525'\n",
+    "rq.init(user, pw)\n",
+    "rq.user.get_quota()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bytes_used': 1097821383,\n",
+       " 'bytes_limit': 10737418240.0,\n",
+       " 'remaining_days': 11,\n",
+       " 'license_type': 'FULL'}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user = 18123610100\n",
+    "pw = 123456\n",
+    "rq.init(user, pw)\n",
+    "rq.user.get_quota()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "print(torch.__version__)\n",
+    "torch.cuda.is_available()\n",
+    "torch.cuda.device_count()\n",
+    "torch.cuda.get_device_name(0)\n",
+    "torch.cuda.current_device()\n",
+    "\n",
+    "RANDOM_SEED = 42\n",
+    "np.random.seed(RANDOM_SEED)\n",
+    "torch.manual_seed(RANDOM_SEED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "print(tf.__version__)\n",
+    "# tf.test.is_gpu_available()\n",
+    "tf.config.list_physical_devices('GPU')\n",
+    "\n",
+    "# from tensorflow.python.client import device_lib\n",
+    "# print(device_lib.list_local_devices())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mon Aug 15 16:52:36 2022       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 470.141.03   Driver Version: 470.141.03   CUDA Version: 11.4     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                               |                      |               MIG M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  NVIDIA GeForce ...  Off  | 00000000:1A:00.0 Off |                  N/A |\n",
+      "| 22%   33C    P8    21W / 250W |      5MiB / 11019MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   1  NVIDIA GeForce ...  Off  | 00000000:1B:00.0 Off |                  N/A |\n",
+      "| 22%   34C    P8    20W / 250W |      5MiB / 11019MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   2  NVIDIA GeForce ...  Off  | 00000000:1C:00.0 Off |                  N/A |\n",
+      "| 22%   34C    P8    21W / 250W |      5MiB / 11019MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   3  NVIDIA GeForce ...  Off  | 00000000:1D:00.0 Off |                  N/A |\n",
+      "| 22%   33C    P8     2W / 250W |      5MiB / 11019MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   4  NVIDIA GeForce ...  Off  | 00000000:1E:00.0 Off |                  N/A |\n",
+      "| 22%   35C    P8     3W / 250W |      5MiB / 11019MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   5  NVIDIA GeForce ...  Off  | 00000000:3D:00.0 Off |                  N/A |\n",
+      "| 22%   31C    P8     1W / 250W |      5MiB / 11019MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   6  NVIDIA GeForce ...  Off  | 00000000:3E:00.0 Off |                  N/A |\n",
+      "| 22%   32C    P8    22W / 250W |      5MiB / 11019MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   7  NVIDIA GeForce ...  Off  | 00000000:3F:00.0 Off |                  N/A |\n",
+      "| 22%   31C    P8    15W / 250W |      5MiB / 11019MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   8  NVIDIA GeForce ...  Off  | 00000000:40:00.0 Off |                  N/A |\n",
+      "| 22%   33C    P8    21W / 250W |      5MiB / 11019MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   9  NVIDIA GeForce ...  Off  | 00000000:41:00.0 Off |                  N/A |\n",
+      "| 22%   31C    P8    13W / 250W |      5MiB / 11019MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                                  |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+      "|        ID   ID                                                   Usage      |\n",
+      "|=============================================================================|\n",
+      "|    0   N/A  N/A      2750      G   /usr/lib/xorg/Xorg                  4MiB |\n",
+      "|    1   N/A  N/A      2750      G   /usr/lib/xorg/Xorg                  4MiB |\n",
+      "|    2   N/A  N/A      2750      G   /usr/lib/xorg/Xorg                  4MiB |\n",
+      "|    3   N/A  N/A      2750      G   /usr/lib/xorg/Xorg                  4MiB |\n",
+      "|    4   N/A  N/A      2750      G   /usr/lib/xorg/Xorg                  4MiB |\n",
+      "|    5   N/A  N/A      2750      G   /usr/lib/xorg/Xorg                  4MiB |\n",
+      "|    6   N/A  N/A      2750      G   /usr/lib/xorg/Xorg                  4MiB |\n",
+      "|    7   N/A  N/A      2750      G   /usr/lib/xorg/Xorg                  4MiB |\n",
+      "|    8   N/A  N/A      2750      G   /usr/lib/xorg/Xorg                  4MiB |\n",
+      "|    9   N/A  N/A      2750      G   /usr/lib/xorg/Xorg                  4MiB |\n",
+      "+-----------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
    ]
   },
   {
