--- a/Projects/T0/CNN/train_XGB/Untitled.ipynb
+++ b/Projects/T0/CNN/train_XGB/Untitled.ipynb
@@ -73,7 +73,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.13 ('yby': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -87,7 +87,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c95fbed52b129232c9ea0f2f91c787ed695e80b66859bc8c4100814e282311dd"
+   }
   }
  },
  "nbformat": 4,
