--- a/Projects/T0/T0.md
+++ b/Projects/T0/T0.md
@@ -5,6 +5,10 @@
 ## T0 Strategies
 </div>
 
+> Background is cheap, show me the alpha.
+> Talk is cheap, show me the code.
+> Create alpha, and be an alpha.
+
 ---
 
 <div align=center>
@@ -15,7 +19,8 @@
 
 接下来设计套利和做预测模型都需要用到大量的深度学习工具，现在是2022.07.07，接下来个把月把重心放在深度学习上，包括从DNN，CNN，RNN，LSTM，GAN，AE，GNN，Bert，GPT，attention，transformer等工具。之后一年不会再上深度学习的课了，但是实习面试的时候却是重中之重，所以从现在开始趁有时间抓紧自学，开学之后的时间就少之又少了。未来一段时间的重心就是深度学习和时序预测了，也算是回归这段实习本该做的事情的正轨了。借这个机会正式入门一下NLP，好好学学language models，上一些网课。一直到大四下申请前重心都可以在这个上面，深度学习，时序预测，然后希望大四下重心可以在强化学习和算法交易两个部分。目前正好有学长一起学，可以相互交流，不会的还能问纽大的学长，还有在百度做过算法的学长。总体而言，股票T0这块，还有CTA的部分，只要是高频，就需要深度学习工具，趁着现在有CPU有GPU的支持，抓紧学习然后投入使用。
 
-### 1. 深度学习理论进阶
+
+### 1. 理论进阶
 
 #### 1.1 细节理解
 
@@ -37,23 +42,28 @@ output = m(input)
 print(output[output==0].shape)
 ```
 
+### 2. 深度学习时序预测：文献阅读
+
+#### 2.1 Paper: Informer (AAAI'21 Best Paper)
+
+
+#### 2.2 Paper: Autoformer (NeurIPS 2021)
+
+
+---
+
+<div align=center>
+
+### T0策略开发
+
+</div>
+
+T0策略
 
 
 
 
-### 2. 深度学习用于时序预测的文献阅读
 
 
-#### 2.1 Paper: A Dual-Stage Attention-Based Recurrent Neural Network for Time Series Prediction (DA-RNN)
-
-
-
-
-
-
-#### 2.2 Paper: Informer (AAAI'21 Best Paper)
-
-
-#### 2.3 Paper: Autoformer (NeurIPS 2021)
 
 
